Fixed email and spacing

--- a/css/indexStyled.css
+++ b/css/indexStyled.css
@@ -403,6 +403,7 @@ footer {
   .spotify {
     max-width: 100%;
     height: auto;
+    min-height: auto;
   }
 
   .player {
